<resources>
    <string name="app_name">GameofThrones</string>
    <string name="app_title">Game of Thrones</string>
    <string name="name_entry">Enter your name</string>
    <string name="question_one">1Q) How did King Joffrey die?</string>
    <string name="question_two">2Q) In the trial by combat where Oberyn "The Red Viper" Martell battle with Gregor "The Mountain" Clegane, who won?</string>
    <string name="question_three">3Q) Identify the following person: </string>
    <string name="question_four">4Q) Select the people who belong to the Lannister Family:</string>
    <string name="question_five">5Q) In which kingdom was Jon Snow brought up?</string>
    <string name="q1_a">Wild Fire</string>
    <string name="q1_b">Poison</string>
    <string name="q1_c">Obsidian</string>
    <string name="q1_d">Arakh</string>
    <string name="q2_ans">Enter your answer here</string>
    <string name="image_of_grey_worm">Image of Grey Worm</string>
    <string name="q3_a">King Joffrey</string>
    <string name="q3_b">Grey Worm</string>
    <string name="q3_c">Daario Naharis</string>
    <string name="q3_d">Tyrion Lannister</string>
    <string name="q4_a">Cersi</string>
    <string name="q4_b">Tyrion</string>
    <string name="q4_c">Daenerys</string>
    <string name="q4_d">Jaime</string>
    <string name="q4_e">Jon Snow</string>
    <string name="q5_a">North</string>
    <string name="q5_b">South</string>
    <string name="q5_c">East</string>
    <string name="q5_d">West</string>
    <string name="submit_button">Submit</string>
</resources>
